[package]
name = "arch"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2018"

[dependencies]
byteorder = "*"
devices = { path = "../devices" }
gdb-remote-protocol = { git = "https://github.com/dgreid/rust-gdb-remote-protocol", branch = "topic/crosvm" }
io_jail = { path = "../io_jail" }
kernel_cmdline = { path = "../kernel_cmdline" }
kvm = { path = "../kvm" }
libc = "*"
msg_socket = { path = "../msg_socket" }
resources = { path = "../resources" }
sync = { path = "../sync" }
sys_util = { path = "../sys_util" }
vm_control = { path = "../vm_control" }
