[package]
name = "disk"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
edition = "2018"

[lib]
path = "src/disk.rs"

[features]
composite-disk = ["protos", "protobuf"]

[dependencies]
async-trait = "*"
libc = "*"
protobuf = { version = "2.3", optional = true }
remain = "*"
cros_async = { path = "../cros_async" }
data_model = { path = "../data_model" }
protos = { path = "../protos", optional = true }
sys_util = { path = "../sys_util" }

[dependencies.futures]
version = "*"
default-features = false
